Dto de usuario do livro iniciado